2009-03-02  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc: Add missing #include.

2009-02-25  John W. Eaton  <jwe@octave.org>

	* Makefile.in: Make maintainer-clean and distclean the same.

2009-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.cc (pow (const octave_int<T>&, const octave_int<T>&)):
	Simplify.

2009-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.h (octave_int_cmp_op::mop): Implement as simple
	forwarders when OCTAVE_INT_USE_LONG_DOUBLE is not defined.
	(octave_int_cmp_op::emulate_mop): New static overloaded template
	member function.
	* oct-inttypes.cc: Turn the octave_int_cmp_op::mop definitions into
	defs for octave_int_cmp_op::emulate_mop. 
	(INSTANTIATE_INT64_DOUBLE_CMP_OP0): Instantiate
	octave_int_cmp_op::emulate_op instead.

2009-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* dDiagMatrix.cc (DiagMatrix::pseudo_inverse): New method.
	* dDiagMatrix.h: Declare it.
	* fDiagMatrix.cc (FloatDiagMatrix::pseudo_inverse): New method.
	* fDiagMatrix.h: Declare it.
	* CDiagMatrix.cc (ComplexDiagMatrix::pseudo_inverse): New method.
	* CDiagMatrix.h: Declare it.
	* fCDiagMatrix.cc (FloatComplexDiagMatrix::pseudo_inverse): New method.
	* fCDiagMatrix.h: Declare it.

2009-02-20  Jaroslav Hajek  <highegg@gmail.com>

	* oct-sort.h (octave_sort<T>::MergeState::MergeState): New
	constructor.
	(octave_sort<T>::MergeState::~MergeState): New destructor.
	(octave_sort<T>::MergeState::reset, 
	octave_sort<T>::MergeState::getmem,
	octave_sort<T>::MergeState::getmemi): New methods.
	(octave_sort<T>::sort,
	octave_sort<T>::merge_lo, octave_sort<T>::merge_hi
	octave_sort<T>::merge_at): Reflect change.

2009-02-19  Jaroslav Hajek  <highegg@gmail.com>

	* oct-types.h (sortmode): Move enum here.
	* oct-sort.h (octave_sort<T>::ms): Declare as pointer.
	(octave_sort<T>::lookup): New overloaded method.
	* oct-sort.cc: Reflect change to ms.
	(octave_sort<T>::lookup): New overloaded method.
	(out_of_range_pred): New helper class.